# SIGA

./: .gitignore  CMakeLists.txt  Lib.c  Lib.h  README.md  compraVenda.c  compraVenda.h  enunciado.md  estatisticas.c  estatisticas.h  exemplo  exemplo.c  ficheiros.h  ficherios.c  gestao_carteiras  gestao_carteiras.c  main  main.c  relatorios.c  relatorios.h
data/: ativos.txt  carteiras.txt  novosValoresAtivos.txt  valoresAtivos
docs/: structs.drawio
